Closed Bug 786595 Opened 13 years ago Closed 13 years ago

Deleted template displays incorrect message body once deleted

Categories

(MailNews Core :: Networking: IMAP, defect)

x86_64
Linux
defect
Not set
major

Tracking

(thunderbird15 unaffected, thunderbird16+ fixed, thunderbird17 fixed, thunderbird18 fixed, seamonkey2.12 unaffected, seamonkey2.13 fixed, seamonkey2.14 fixed, seamonkey2.15 fixed)

RESOLVED FIXED
Thunderbird 18.0
Tracking Status
thunderbird15 --- unaffected
thunderbird16 + fixed
thunderbird17 --- fixed
thunderbird18 --- fixed
seamonkey2.12 --- unaffected
seamonkey2.13 --- fixed
seamonkey2.14 --- fixed
seamonkey2.15 --- fixed

People

(Reporter: iannbugzilla, Assigned: iannbugzilla)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

STR using Daily 18.0a1 (2012-08-29) Build ID 20120829000550 1/ Using an IMAP account go to Trash folder, select properties from context menu and Repair Folder 2/ Go to Templates folder and create a Test Template. 3/ Go to Inbox, select a message 4/ From File menu, select Save As Template 5/ Go to Templates folder, select template created from message and make sure message body displays correctly 6/ Delete that template 7/ Go to Trash folder and select template you have just deleted. Expected Result 1/ Message body is the correct one Actual Result 1/ Message body is that of the test template Notes 1/ View message source displays the correct message source 2/ Doing a "Repair Folder" on the trash folder corrects the issue 3/ Happens if you add multiple templates from inbox and then delete them 4/ Tested on Earlybird 16.0a2 (2012-08-27) also happens there 5/ Tested on TB 14.0 (Build ID 20120717093534) and works fine there
EB 15.0a2 Build ID 20120716042001 OK EB 16.0a2 Build ID 20120717042008 Bad
Daily 16.0a1 Build ID 20120619030501 OK Daily 16.0a1 Build ID 20120620030501 Bad
http://hg.mozilla.org/comm-central/pushloghtml?startdate=2012-06-19+03%3A05%3A01&enddate=2012-06-20+03%3A05%3A01 appears to be the list of pushes cc'ing likely people. Probably an IMAP issue -> MailNews Core: Network IMAP
Component: Message Reader UI → Networking: IMAP
Product: Thunderbird → MailNews Core
Confirmed, backing out the fix from bug 765926 locally fixes the issue for me.
This backs out the parts of the patch from bug 765926 that is not removal of redundant code. This fixes the issue locally.
Assignee: nobody → iann_bugzilla
Status: NEW → ASSIGNED
Attachment #658279 - Flags: review?(neil)
Comment on attachment 658279 [details] [diff] [review] Partial backout of patch from bug 765926 [Checked in: Comment 8] I assume you'll reopen bug 765926...
Attachment #658279 - Flags: review?(neil) → review+
Attachment #658279 - Attachment description: Partial backout of patch from bug 765926 → Partial backout of patch from bug 765926 [Checked in: Comment 8]
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 18.0
Comment on attachment 658279 [details] [diff] [review] Partial backout of patch from bug 765926 [Checked in: Comment 8] [Approval Request Comment] Regression caused by (bug #): 765926 User impact if declined: Issues with incorrect message body being displayed on deleted templates once they are in Trash folder on IMAP servers. Potentially causes issues moving messages from "Sent" to "Inbox" too on IMAP servers. Testing completed (on c-c, etc.): tested locally, patch has been checked into c-c Risk to taking this patch (and alternatives if risky): None known
Attachment #658279 - Flags: approval-comm-beta?
Attachment #658279 - Flags: approval-comm-aurora?
Attachment #658279 - Flags: approval-comm-beta?
Attachment #658279 - Flags: approval-comm-beta+
Attachment #658279 - Flags: approval-comm-aurora?
Attachment #658279 - Flags: approval-comm-aurora+
Blocks: 765926
No longer depends on: 765926
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: