Bug 786595 - Deleted template displays incorrect message body once deleted r=neil